fix: add missing spacing input-side-default

--- a/src/styles/tailwind-v3/globals.css
+++ b/src/styles/tailwind-v3/globals.css
@@ -19,6 +19,7 @@
   --spacing-input-side-s: 0.375rem;
   --spacing-input-side-m: 0.625rem;
   --spacing-input-side-l: 0.75rem;
+  --spacing-input-side-default: 0.75rem;
 }
 
 .m-0\! {
